--- a/main.html
+++ b/main.html
@@ -1,4 +1,5 @@
 <html>
+    <meta name="description" content="Fight your way to destiny as the Arlo stans prepare to attack your channel and your reputation, through Arlo Stans, Tweets and even Arlo's own creatures to defeat the evil Arlo boss once and for all! Take the world's fate in your hands in this modern browser-playable game!">
     <head>
         <title> Escape From Arlo's Trains Official Website </title>
         <link rel="icon" href="img_res/Favicon.png">
