--- a/main.html
+++ b/main.html
@@ -56,7 +56,9 @@
                                 <table cellspacing="0" cellpadding="0">
                                     <tr>
                                         <td>
-                                            <iframe src="https://forkphorus.github.io/embed.html?id=629646515&ui=false" width="960" height="720" allowfullscreen="false" allowtransparency="false" style="border:none;"></iframe>
+                                           <font color=red face="verdana" size="1">
+                                                 Unfortunately, due to an API change to comply with GitHub policies, 'Escape From Arlo's Trains' is not available on browser anymore. A download link will be made available soon. Thank you for your understanding.                   
+                                           </font>
                                         </td>
                                     </tr>
                                 </table>    
